Correctly decode main entity data

--- a/view/frontend/templates/jsonld.phtml
+++ b/view/frontend/templates/jsonld.phtml
@@ -1,5 +1,10 @@
+<?php
+/**
+* @var $block \OuterEdge\StructuredData\Block\Jsonld
+ */
+?>
 <!-- Structured Data by outer/edge (https://outeredge.agency) -->
-<?php $mainEntity = $block->getChildHtml('main.entity'); ?>
+<?php $mainEntity = $block->getMainEntity(); ?>
 <?php $additionalSchema = $block->getChildHtml('additional.schema'); ?>
 <script type="application/ld+json" id="structured-data">
 {
